--- a/index.html
+++ b/index.html
@@ -1,34 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/main.css">
 	<title>Изучение HTML5</title>
 </head>
-<body>
-	<img class="logo" src="img/logo.jpg" alt="logo">
-	<h1>Вступление H1</h1>
-	<p>Это текст моего первого домашнего задания.</p>
-	<p>Не верится, но мне уже удается писать свой первый код на HTML.</p>
-	<h2>Что дальше? H2</h2>
-	<p>Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a href="https://google.com">Прочитать больше в Google</a></p>
-	<h2>Что я буду уметь? H2</h2>
-	<p>Я смогу создавать вот такие замечательные формы:</p>
-	<form action="#">
-		<input type="text" placeholder="Имя">
-		<input type="text" placeholder="E-mail">
-		<input type="text" placeholder="Телефон">
-		<button type="submit">Отправить форму</button>
-	</form>
-	<p>А также, я научусть создавать списки:</p>
-	<ul>
-		<li>С одним пунктом</li>
-		<li>С двумя пунктами</li>
-		<li>И даже с тремя отдельными пунктами</li>
-	</ul>
-	<h2>Отличное начало! H2</h2>
 
-	<a href="https://wayup.in/cabinet/course10/unit1/lesson1">Перейти на страницу первого занятия курса</a>
-	
+<body>
+
+	<header class="header">
+		<img class="header__logo" src="img/logo.jpg" alt="logo">
+		<h1 class="header__title">Вступление H1</h1>
+		<p class="header__text white">Это текст моего первого домашнего задания.</p>
+		<p class="header__text">Не верится, но мне уже удается писать свой <span class="header__text-span">первый код на HTML.</span></p>
+	</header>
+
+	<main class="main">
+		<section class="next">
+			<h2 class="next__title green">Что дальше? H2</h2>
+			<p class="next__text">Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь
+				новых вершин! <a class="next__link" href="https://google.com" target="_blank">Прочитать больше в Google</a></p>
+		</section>
+		<section class="skills">
+			<h2 class="skills__title green">Что я буду уметь? H2</h2>
+			<p class="skills__text-form">Я смогу создавать вот такие замечательные формы:</p>
+			<form class="skills__form form" action="#">
+				<fieldset class="form__container">
+					<legend class="hide">Форма обратной связи</legend>
+					<input class="form__input" name="name" type="text" placeholder="Имя">
+					<input class="form__input" name="email" type="email" placeholder="E-mail">
+					<input class="form__input" name="phone" type="tel" placeholder="Телефон">
+					<button class="form__button" type="submit">Отправить форму</button>
+				</fieldset>
+			</form>
+			<p class="skills__text-list">А также, я научусть создавать списки:</p>
+			<ul class="skills__list list">
+				<li class="list__item">С одним пунктом</li>
+				<li class="list__item">С несколькими пунктами</li>
+				<li class="list__item">И даже с тремя отдельными пунктами</li>
+			</ul>
+		</section>
+	</main>
+
+	<footer class="footer">
+		<h2 class="footer__title green">Отличное начало! H2</h2>
+		<a class="footer__link" href="https://wayup.in/cabinet/course10/unit1/lesson1" target="_blank">Перейти на страницу первого занятия курса</a>
+	</footer>
+
 </body>
+
 </html>
